syntax = "proto3";

package sso;

option go_package = "./pb";

service auth {
  // 用户登录
  rpc Login(LoginReq) returns (LoginResp);

  // 生成登录二维码(PC端)
  rpc GenerateQrcode(QrcodeReq) returns (QrcodeResp);

  // 检查二维码状态(PC端)
  rpc CheckQrcodeStatus(QrcodeStatusReq) returns (QrcodeStatusResp);

  // 手机端确认登录(PC端)
  rpc ConfirmQrcodeLogin(QrcodeConfirmReq) returns (LoginResp);

  // 验证会话
  rpc VerifyToken(VerifyReq) returns (VerifyResp);

  // 用户登出
  rpc Logout(LogoutReq) returns (LogoutResp); // 修正返回类型

  // 注册
  rpc Register(RegisterReq) returns (RegisterResp);

  // 发送短信验证码
  rpc SendSmsCode(SendSmsCodeReq) returns (SendSmsCodeResp);

  // 重置密码
  rpc ResetPassword(ResetPasswordReq) returns (ResetPasswordResp);

  // 刷新Token
  rpc RefreshToken(RefreshTokenReq) returns (RefreshTokenResp);

  // 发送邮件验证码
  rpc SendEmailCode(SendEmailCodeReq) returns (SendEmailCodeResp);

  // 重置密码
  rpc ResetPasswordByEmail(ResetPasswordByEmailReq) returns (ResetPasswordByEmailResp);

  // 绑定手机号
  rpc BindMobile(BindMobileReq) returns (BindMobileResp);

  // 绑定邮箱
  rpc BindEmail(BindEmailReq) returns (BindEmailResp);

  // 解绑手机号
  rpc UnbindMobile(UnbindMobileReq) returns (UnbindMobileResp);

  // 解绑邮箱
  rpc UnbindEmail(UnbindEmailReq) returns (UnbindEmailResp);

  // 解绑第三方登录
  rpc UnbindThirdParty(UnbindThirdPartyReq) returns (UnbindThirdPartyResp);

  // 绑定第三方登录
  rpc BindThirdParty(BindThirdPartyReq) returns (BindThirdPartyResp);
}

// 登录请求
message LoginReq {
  // @inject_tag: json:"mobile"
  optional string mobile = 1;          // 手机号(可选，格式错误时直接拦截)

  // @inject_tag: json:"sms_code"
  optional string sms_code = 2;        // 短信验证码(可选，存在时强制6位数字)

  // @inject_tag: json:"platform"
  optional string platform = 3;         // 第三方平台: wechat/qq/alipay(可选，仅支持指定平台)

  // @inject_tag: json:"open_id"
  optional string open_id = 4;          // 第三方openId(平台登录时必填，与platform联动校验)

  // @inject_tag: json:"account"
  optional string account = 5;          // 账号(密码登录时需要，格式限制)

  // @inject_tag: json:"password"
  optional string password = 6;         // 密码(密码登录时需要，强密码策略)

  // @inject_tag: json:"device_type"
  optional string device_type = 7;      // 设备类型: app/pc/h5(可选，仅支持指定类型)

  // @inject_tag: json:"device_id"
  optional string device_id = 8;        // 设备唯一标识(可选，存在时限制长度)

  // @inject_tag: json:"login_ip"
  optional string login_ip = 9;         // 登录IP(可选，存在时校验IP格式)

  // @inject_tag: json:"is_quick"
  optional bool is_quick = 10;          // 是否快捷登录(可选)
}

// 登录响应
message LoginResp {
  string token = 1;            // JWT Token
  string refresh_token = 2;    // 刷新Token
}

// 二维码生成请求
message QrcodeReq {
  string device_id = 1;        // PC设备ID
  string login_ip = 2;         // 登录IP
}

// 二维码生成响应
message QrcodeResp {
  string qid = 1;              // 二维码唯一ID
  string image_url = 2;        // 二维码图片URL
}

// 二维码状态请求
message QrcodeStatusReq {
  string qid = 1;              // 二维码ID
}

// 二维码状态响应
message QrcodeStatusResp {
  enum Status {
    WAITING = 0;               // 等待扫描
    SCANNED = 1;               // 已扫描(手机端已扫描二维码)
    CONFIRMED = 2;             // 已确认(手机端已确认登录)
    EXPIRED = 3;               // 已过期
  }
  Status status = 1;
  string token = 2;            // 登录成功的Token(当状态为CONFIRMED时返回)
}

// 二维码确认请求
message QrcodeConfirmReq {
  string qid = 1;              // 二维码ID
  string app_token = 2;        // 手机端Token
}

// 会话验证请求
message VerifyReq {
  string token = 1;            // 待验证的Token
  string device_type = 2;      // 设备类型
}

// 会话验证响应
message VerifyResp {
  int64 user_id = 1;           // 用户ID
  string device_type = 2;      // 设备类型
  string device_id = 3;        // 设备ID
}

// 登出请求
message LogoutReq {
  string token = 1;            // 当前Token
  string device_type = 2;      // 设备类型
}

message LogoutResp {
  bool success = 1; // 登出结果
  string message = 2; // 提示信息(如"账号已在其他设备登录")
}

// 短信验证码请求
message SendSmsCodeReq {
  string mobile = 1; // 手机号(必填)
  string scene = 2; // 场景: register/login/reset_pwd
}

// 短信验证码响应
message SendSmsCodeResp {
  bool success = 1;
  string message = 2;
  int32 expire_seconds = 3; // 验证码有效期(秒)
}

// 密码重置请求(手机号)
message ResetPasswordReq {
  string mobile = 1; // 手机号(必填)
  string sms_code = 2; // 短信验证码(必填)
  string new_password = 3; // 新密码(必填，8-32位字母/数字/特殊字符)
}

// 邮箱重置密码请求
message ResetPasswordByEmailReq {
  string email = 1; // 邮箱(必填)
  string email_code = 2; // 邮箱验证码(必填)
  string new_password = 3; // 新密码(同手机号重置规则)
}

// 密码重置响应(通用)
message ResetPasswordResp {
  bool success = 1;
  string message = 2;
}

message ResetPasswordByEmailResp {
  bool success = 1; // 与ResetPasswordResp结构一致，便于复用
  string message = 2;
}

// 刷新Token请求
message RefreshTokenReq {
  string refresh_token = 1; // 刷新Token(必填)
}

// 刷新Token响应
message RefreshTokenResp {
  string token = 1; // 新访问Token
  string refresh_token = 2; // 新刷新Token(延长有效期)
}

// 邮箱验证码请求(同短信验证码结构)
message SendEmailCodeReq {
  string email = 1; // 邮箱(必填)
  string scene = 2; // 场景
}

// 邮箱验证码响应(同短信)
message SendEmailCodeResp {
  bool success = 1;
  string message = 2;
  int32 expire_seconds = 3;
}

// 第三方账号绑定请求
// 绑定手机号请求
message BindMobileReq {
  string mobile = 1; // 手机号(必填)
  string sms_code = 2; // 验证码(必填)
}

// 绑定邮箱请求
message BindEmailReq {
  string email = 1; // 邮箱(必填)
  string email_code = 2; // 验证码(必填)
}

// 绑定/解绑响应(通用结构)
message BindMobileResp {
  bool success = 1; // 绑定结果
  string message = 2; // 提示信息(如"绑定成功"或"手机号已绑定")
}

message BindEmailResp {
  bool success = 1; // 绑定结果
  string message = 2; // 提示信息(如"绑定成功"或"邮箱已绑定")
}

message UnbindMobileResp {
  bool success = 1; // 解绑结果
  string message = 2; // 提示信息(如"解绑成功"或"手机号未绑定")
}

message UnbindEmailResp {
  bool success = 1; // 解绑结果
  string message = 2; // 提示信息(如"解绑成功"或"邮箱未绑定")
}

message UnbindThirdPartyResp {
  bool success = 1; // 解绑结果
  string message = 2; // 提示信息(如"解绑成功"或"第三方平台未绑定")
}

message BindThirdPartyResp {
  bool success = 1; // 绑定结果
  string message = 2; // 提示信息(如"绑定成功"或"第三方平台已绑定")
}

// 解绑第三方平台请求
message UnbindThirdPartyReq {
  string platform = 1; // 平台(必填，限制可选值)
  string open_id = 2; // 平台唯一标识(必填)
  string union_id = 3; // 可选，跨应用统一标识(如微信UnionID)
}

// 第三方平台绑定请求
message BindThirdPartyReq {
  string platform = 1; // 平台(必填)
  string open_id = 2; // OpenID(必填)
  string union_id = 3; // 可选，跨应用统一标识
}



// 解绑邮箱请求（需验证验证码）
message UnbindEmailReq {
  string email = 1; // 待解绑邮箱(必填)
  string email_code = 2; // 邮箱验证码(必填，验证邮箱归属)
}



// 注册请求
message RegisterReq {
  string mobile = 1; // 手机号(必填，作为登录账号)
  string password = 2; // 密码(必填，8-32位字母/数字/特殊字符)
  string sms_code = 3; // 短信验证码(必填，用于验证手机号归属)
}

// 注册响应（与登录响应结构一致，便于客户端统一处理）
message RegisterResp {
  string token = 1;            // JWT访问Token
  string refresh_token = 2;    // 刷新Token
}


// 解绑手机号请求（需验证验证码防止误操作）
message UnbindMobileReq {
  string mobile = 1; // 待解绑手机号(必填)
  string sms_code = 2; // 短信验证码(必填，验证手机号归属)
}